Update collated code

--- a/collated/main/john19950730.md
+++ b/collated/main/john19950730.md
@@ -1,24 +1,81 @@
 # john19950730
-###### \java\seedu\address\logic\autocomplete\AutoCompleteLogic.java
+###### \java\seedu\address\autocomplete\AutoCompleteLogic.java
 ``` java
+/**
+ * API of the AutoCompleteLogic component
+ */
 public interface AutoCompleteLogic {
 
-    /**
-     * Generates all possible complete input that the user potentially want,
-     * based on incomplete user input supplied.
-     * @param stub incomplete user input specified.
-     * @return AutoCompletePossibilities object containing list of all possible complete input.
-     */
-    AutoCompletePossibilities generateAutoCompletePossibilities(String stub);
+    /** Returns the list of possible options that autocomplete function should complete for the user */
+    ListElementPointer getAutoCompleteSnapshot();
+
+    /** Updates the current options based on new incomplete user input stub */
+    void updateAutoCompletePossibilities(String stub);
 
 }
 ```
-###### \java\seedu\address\logic\autocomplete\AutoCompleteManager.java
+###### \java\seedu\address\autocomplete\AutoCompleteManager.java
+``` java
+/** Manages autocomplete logic. */
+public class AutoCompleteManager implements AutoCompleteLogic {
+
+    private static final int AUTOCOMPLETE_CACHE_SIZE = 10;
+
+    private final Model model;
+    private final AutoCompletePossibilitiesManager possibilitiesManager;
+    private AutoCompletePossibilities autoCompletePossibilities;
+
+    public AutoCompleteManager(Model model) {
+        this.model = model;
+        possibilitiesManager = new AutoCompletePossibilitiesManager(model, AUTOCOMPLETE_CACHE_SIZE);
+        autoCompletePossibilities = new AutoCompletePossibilities("", new IdentityParser());
+    }
+
+    @Override
+    public ListElementPointer getAutoCompleteSnapshot() {
+        return new ListElementPointer(autoCompletePossibilities.getPossibilities());
+    }
+
+    @Override
+    public void updateAutoCompletePossibilities(String stub) {
+        autoCompletePossibilities = possibilitiesManager.search(stub);
+    }
+
+
+
+}
+```
+###### \java\seedu\address\autocomplete\AutoCompletePossibilities.java
 ``` java
 /**
- * Manages autocomplete logic, as well as optimizations such as memoization.
+ * Stores the possible autocomplete options.
  */
-public class AutoCompleteManager implements AutoCompleteLogic {
+public class AutoCompletePossibilities {
+    private final String stub;
+    private final List<String> possibilities;
+    private final AutoCompleteParser parser;
+
+    /** Default constructor */
+    public AutoCompletePossibilities(String stub, AutoCompleteParser parser) {
+        this.stub = stub;
+        this.parser = parser;
+        possibilities = parser.parseForPossibilities(stub);
+    }
+
+    public List<String> getPossibilities() {
+        return possibilities;
+    }
+
+    public String getStub() {
+        return stub;
+    }
+
+}
+```
+###### \java\seedu\address\autocomplete\AutoCompletePossibilitiesManager.java
+``` java
+/** Manages how possibilities are generated and optimizations of how possibilities are stored for later use. */
+public class AutoCompletePossibilitiesManager {
 
     private final Logger logger = LogsCenter.getLogger(AutoCompleteManager.class);
 
@@ -45,17 +102,12 @@ public class AutoCompleteManager implements AutoCompleteLogic {
     private final LinkedList<AutoCompletePossibilities> cache = new LinkedList<AutoCompletePossibilities>();
     private final int maxSize;
 
-    public AutoCompleteManager(Model model, int size) {
+    public AutoCompletePossibilitiesManager(Model model, int size) {
         this.model = model;
         modelParser = new AutoCompleteByPrefixModelParser(model);
         wordInNameParser = new AutoCompleteWordInNameParser(model);
         tagParser = new AutoCompleteTagParser(model);
         maxSize = size;
-    }
-
-    @Override
-    public AutoCompletePossibilities generateAutoCompletePossibilities(String stub) {
-        return search(stub);
     }
 
     /**
@@ -65,7 +117,7 @@ public class AutoCompleteManager implements AutoCompleteLogic {
      * @return AutoCompletePossibilities object that contains all autocomplete options,
      * new object will be generated if not found in cache
      */
-    private AutoCompletePossibilities search(String stub) {
+    public AutoCompletePossibilities search(String stub) {
         for (AutoCompletePossibilities entryInCache : cache) {
             if (stub.equals(entryInCache.getStub())) {
                 logger.info("Found memoized autocomplete options.");
@@ -181,34 +233,7 @@ public class AutoCompleteManager implements AutoCompleteLogic {
 
 }
 ```
-###### \java\seedu\address\logic\autocomplete\AutoCompletePossibilities.java
-``` java
-/**
- * Stores the possible autocomplete options.
- */
-public class AutoCompletePossibilities {
-    private final String stub;
-    private final List<String> possibilities;
-    private final AutoCompleteParser parser;
-
-    /** Default constructor */
-    public AutoCompletePossibilities(String stub, AutoCompleteParser parser) {
-        this.stub = stub;
-        this.parser = parser;
-        possibilities = parser.parseForPossibilities(stub);
-    }
-
-    public List<String> getPossibilities() {
-        return possibilities;
-    }
-
-    public String getStub() {
-        return stub;
-    }
-
-}
-```
-###### \java\seedu\address\logic\autocomplete\AutoCompleteUtils.java
+###### \java\seedu\address\autocomplete\AutoCompleteUtils.java
 ``` java
 
 import java.util.List;
@@ -313,7 +338,7 @@ public class AutoCompleteUtils {
 
 }
 ```
-###### \java\seedu\address\logic\autocomplete\CommandWordUsageTuple.java
+###### \java\seedu\address\autocomplete\CommandWordUsageTuple.java
 ``` java
 /**
  * Stores a pair of command word and its usage,
@@ -340,7 +365,7 @@ public class CommandWordUsageTuple {
 
 }
 ```
-###### \java\seedu\address\logic\autocomplete\parser\AutoCompleteByPrefixModelParser.java
+###### \java\seedu\address\autocomplete\parser\AutoCompleteByPrefixModelParser.java
 ``` java
 /** Parses the possible names that the user might have been trying to type,
  *  based on the names currently present in the address book. */
@@ -401,7 +426,7 @@ public class AutoCompleteByPrefixModelParser implements AutoCompleteParser {
 
 }
 ```
-###### \java\seedu\address\logic\autocomplete\parser\AutoCompleteCommandParser.java
+###### \java\seedu\address\autocomplete\parser\AutoCompleteCommandParser.java
 ``` java
 /**
  * Parses incomplete user input into list of possible command skeletons.
@@ -449,7 +474,7 @@ public class AutoCompleteCommandParser implements AutoCompleteParser {
     }
 }
 ```
-###### \java\seedu\address\logic\autocomplete\parser\AutoCompleteParser.java
+###### \java\seedu\address\autocomplete\parser\AutoCompleteParser.java
 ``` java
 /**
  * Represents a parser used for autocomplete, different logics can be used for different occassions
@@ -461,7 +486,7 @@ public interface AutoCompleteParser {
 
 }
 ```
-###### \java\seedu\address\logic\autocomplete\parser\AutoCompleteSetStringParser.java
+###### \java\seedu\address\autocomplete\parser\AutoCompleteSetStringParser.java
 ``` java
 /** Represents autocomplete parser that matches a fixed set of strings, defined in the constructor. */
 public class AutoCompleteSetStringParser implements AutoCompleteParser {
@@ -485,7 +510,7 @@ public class AutoCompleteSetStringParser implements AutoCompleteParser {
     }
 }
 ```
-###### \java\seedu\address\logic\autocomplete\parser\AutoCompleteTagParser.java
+###### \java\seedu\address\autocomplete\parser\AutoCompleteTagParser.java
 ``` java
 /** Represents a parser that specifically parses only tags based on last word of incomplete user input. */
 public class AutoCompleteTagParser extends AutoCompleteByPrefixModelParser {
@@ -509,7 +534,7 @@ public class AutoCompleteTagParser extends AutoCompleteByPrefixModelParser {
 
 }
 ```
-###### \java\seedu\address\logic\autocomplete\parser\AutoCompleteWordInNameParser.java
+###### \java\seedu\address\autocomplete\parser\AutoCompleteWordInNameParser.java
 ``` java
 /** Represents a parser that specifically parses only words in names based on last word of incomplete user input. */
 public class AutoCompleteWordInNameParser extends AutoCompleteByPrefixModelParser {
@@ -567,36 +592,13 @@ public class AutoCompleteWordInNameParser extends AutoCompleteByPrefixModelParse
 
 }
 ```
-###### \java\seedu\address\logic\autocomplete\parser\IdentityParser.java
+###### \java\seedu\address\autocomplete\parser\IdentityParser.java
 ``` java
 /** Used exclusively to act as an identity function. */
 public class IdentityParser implements AutoCompleteParser {
 
     public List<String> parseForPossibilities(String stub) {
         return Arrays.asList(new String[] {stub});
-    }
-
-}
-```
-###### \java\seedu\address\logic\Logic.java
-``` java
-    /** Returns the list of commands that autocomplete function should complete for the user */
-    ListElementPointer getAutoCompleteSnapshot();
-
-    void updateAutoCompletePossibilities(String stub);
-
-}
-```
-###### \java\seedu\address\logic\LogicManager.java
-``` java
-    @Override
-    public ListElementPointer getAutoCompleteSnapshot() {
-        return new ListElementPointer(autoCompletePossibilities.getPossibilities());
-    }
-
-    @Override
-    public void updateAutoCompletePossibilities(String stub) {
-        autoCompletePossibilities = autoCompleteLogic.generateAutoCompletePossibilities(stub);
     }
 
 }
@@ -693,7 +695,7 @@ public class IdentityParser implements AutoCompleteParser {
         // loop back to the start (original user input) if all autocomplete options are exhausted
         if (!autoCompleteSnapshot.hasPrevious()) {
             logger.info("No more options, go back to original user input stub.");
-            autoCompleteSnapshot = logic.getAutoCompleteSnapshot();
+            autoCompleteSnapshot = autoCompleteLogic.getAutoCompleteSnapshot();
             replaceText(autoCompleteSnapshot.current());
             appendText(textAfterCaret);
         } else {
@@ -738,14 +740,14 @@ public class IdentityParser implements AutoCompleteParser {
 
         logger.info("Retrieve autocomplete options: " + autoCompleteStub);
         // only pass the text before the caret into autocomplete
-        logic.updateAutoCompletePossibilities(autoCompleteStub);
+        autoCompleteLogic.updateAutoCompletePossibilities(autoCompleteStub);
 
         // remember the text after caret
         textAfterCaret = commandTextField.getText()
             .substring(commandTextField.getCaretPosition(), commandTextField.getText().length());
         logger.info("Ignore text after caret: " + textAfterCaret);
 
-        autoCompleteSnapshot = logic.getAutoCompleteSnapshot();
+        autoCompleteSnapshot = autoCompleteLogic.getAutoCompleteSnapshot();
         isAutoCompletePossibilitiesUpToDate = true;
     }
 
