--- a/collated/test/john19950730.md
+++ b/collated/test/john19950730.md
@@ -1,11 +1,12 @@
 # john19950730
-###### \java\seedu\address\logic\autocomplete\AutoCompleteLogicTest.java
+###### \java\seedu\address\autocomplete\AutoCompletePossibilitiesManagerTest.java
 ``` java
-public class AutoCompleteLogicTest {
+public class AutoCompletePossibilitiesManagerTest {
     @Rule
     public ExpectedException thrown = ExpectedException.none();
 
-    private final AutoCompleteLogic logic = new AutoCompleteManager(new ModelStubWithRequiredMethods(), 10);
+    private final AutoCompletePossibilitiesManager logic =
+            new AutoCompletePossibilitiesManager(new ModelStubWithRequiredMethods(), 10);
 
     @Test
     public void testEmptyInput() {
@@ -67,11 +68,11 @@ public class AutoCompleteLogicTest {
     }
 
     private List<String> listOfOptions(String stub) {
-        return logic.generateAutoCompletePossibilities(stub).getPossibilities();
+        return logic.search(stub).getPossibilities();
     }
 
 ```
-###### \java\seedu\address\logic\autocomplete\parser\AutoCompleteByPrefixModelParserTest.java
+###### \java\seedu\address\autocomplete\parser\AutoCompleteByPrefixModelParserTest.java
 ``` java
 public class AutoCompleteByPrefixModelParserTest {
     @Rule
@@ -266,7 +267,7 @@ public class AutoCompleteByPrefixModelParserTest {
     }
 
 ```
-###### \java\seedu\address\logic\autocomplete\parser\AutoCompleteByPrefixModelParserTest.java
+###### \java\seedu\address\autocomplete\parser\AutoCompleteByPrefixModelParserTest.java
 ``` java
         @Override
         public List<String> getAllTagsInAddressBook() {
@@ -286,7 +287,7 @@ public class AutoCompleteByPrefixModelParserTest {
         }
 
 ```
-###### \java\seedu\address\logic\autocomplete\parser\AutoCompleteCommandParserTest.java
+###### \java\seedu\address\autocomplete\parser\AutoCompleteCommandParserTest.java
 ``` java
 public class AutoCompleteCommandParserTest {
     @Rule
@@ -310,7 +311,7 @@ public class AutoCompleteCommandParserTest {
 
 }
 ```
-###### \java\seedu\address\logic\autocomplete\parser\AutoCompleteSetStringParserTest.java
+###### \java\seedu\address\autocomplete\parser\AutoCompleteSetStringParserTest.java
 ``` java
 public class AutoCompleteSetStringParserTest {
     @Rule
@@ -341,7 +342,7 @@ public class AutoCompleteSetStringParserTest {
     }
 }
 ```
-###### \java\seedu\address\logic\autocomplete\parser\AutoCompleteTagParserTest.java
+###### \java\seedu\address\autocomplete\parser\AutoCompleteTagParserTest.java
 ``` java
     @Test
     public void testParsePossibilities() {
@@ -365,7 +366,7 @@ public class AutoCompleteSetStringParserTest {
     }
 
 ```
-###### \java\seedu\address\logic\autocomplete\parser\AutoCompleteWordInNameParserTest.java
+###### \java\seedu\address\autocomplete\parser\AutoCompleteWordInNameParserTest.java
 ``` java
     @Test
     public void testParsePossibilities() {
