--- a/docs/team/john19950730.adoc
+++ b/docs/team/john19950730.adoc
@@ -30,6 +30,8 @@ Specifically, the main target of the AutoComplete feature is accomplish the foll
 * Reduce number of keystrokes required to enter a complete command.
 * Help users remember part of the syntax of commands that require multiple arguments.
 
+Having the AutoComplete feature would increase the productivity of users of this application, since they take less time to enter each command, and will have to refer to the documentations less.
+
 ==== Implementation
 
 ---
