--- a/docs/team/freesoup.adoc
+++ b/docs/team/freesoup.adoc
@@ -4,7 +4,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :stylesDir: ../stylesheets
 
 == Project: Rubrika
-AddressBook - Level 4 is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
+Rubrika is a desktop address book application targeted at Self-employed professionals and freelancers to help the manage their contacts that they use in their day to day life.  The user interacts with it using a CLI, and it has a GUI created with JavaFX. Rubrika is written in java.
 
 *Code contributed*: [https://github.com/CS2103AUG2017-W15-B1/Main/blob/master/collated/main/freesoup.md[Functional code]] [https://github.com/CS2103AUG2017-W15-B1/Main/blob/master/collated/test/freesoup.md[Test code]]
 
@@ -23,7 +23,13 @@ include::../UserGuide.adoc[tag=importexport]
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
+The Import and Export features were added to help freelancers share their contacts with one another or across different copies of Rubrika. It is meant to help save time and reduce the need to add each and every contact from one address book to the other. +
+
+The Import and Export feature also serves as a way to backup a user's contact so that they may keep the files in a safe location. In the event that the contacts in Rubrika is lost, they can simply import the back up files.
+
+The user may choose to use a File Explorer to locate the contact file as there can be many possible download locations depending on the user's preference.
+
+The currently supported format are vCard(.vcf) and XML(.xml) as they are commonly used file types.
 
 ==== Implementation
 
@@ -51,7 +57,9 @@ include::../UserGuide.adoc[tag=sort]
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
+The sort function was added to help users find contacts in an orderly manner when they their search boundary is too wide.
+
+For e.g. Users may prefer to phone up a certain group of people under the same tag in a orderly manner. He can than sort the result after finding the list of people based on their tag.
 
 ==== Implementation
 
@@ -78,7 +86,11 @@ include::../UserGuide.adoc[tag=rmtag]
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
+The Remove Tag function was meant to help users manage their tags in a more efficient manner. We recognise that freelancers and self employed professionals are likely to have multiple tags for different people.
+
+Remove Tag was implemented to be able to delete all instance of a given tag that exists in the addressbook. This helps a user to save time from editing each tag away from each person.
+
+Alternatively, Remove Tag is able to remove a single tag from a specified person. This helps to save time as editing a person's tag to remove a single tag requires typing all other tags again.
 
 ==== Implementation
 
