--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -35,7 +35,7 @@ image::eryao95.png[width="120", height="150" align="left"]
 {empty}[http://github.com/eryao95[github]] [<<johndoe#, portfolio>>]
 
 Role: Developer + Code Quality Manager +
-Responsibilities: Storage
+Responsibilities: Documentation + Storage
 
 '''
 
