Add PPP to AboutUs

--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -29,7 +29,7 @@ Role: In charge of UI Component
 
 === Jackie Tan
 image::freesoup.png[width="150", align="left"]
-{empty}[http://github.com/freesoup[github]] [<<johndoe#, portfolio>>]
+{empty}[http://github.com/freesoup[github]] [<<freesoup#, portfolio>>]
 
 Role: Developer +
 Responsibilities: Documentation, In charge of Model, Code Quality
