--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -12,7 +12,7 @@ We are a team based in the http://www.comp.nus.edu.sg[School of Computing, Natio
 
 === Huang Chi Ying
 image::john19950730.png[width="150", align="left"]
-{empty}[http://github.com/john19950730[github]][portfolio]
+{empty}[http://github.com/john19950730[github]][<<john19950730#, portfolio>>]
 
 Role: Developer +
 Responsibilities: Documentation, Peer Review, In charge of mainly Logic
