--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -509,7 +509,7 @@ The data from the backup file has to be loaded manually by copying the contents 
 
 Ark can store the scheduled delivery date of parcels. It only accepts valid dates,
 including valid leap years and days. +
-Additionally, the dates should be in the following formal: DD-MM-YYYY +
+The dates should be in one of the following formats: DD-MM-YYYY
 The list of Parcels is kept in sorted order according to the delivery dates, with the earliest dates in front.
 
 //end::deliveryDate[]
