Update collate files.

--- a/collated/main/john19950730.md
+++ b/collated/main/john19950730.md
@@ -330,6 +330,7 @@ public class AutoCompleteCommandParser implements AutoCompleteParser {
         new CommandWordUsageTuple(ExitCommand.COMMAND_WORD, ExitCommand.COMMAND_USAGE),
         new CommandWordUsageTuple(FindCommand.COMMAND_WORD, FindCommand.COMMAND_USAGE),
         new CommandWordUsageTuple(FindTagCommand.COMMAND_WORD, FindTagCommand.COMMAND_USAGE),
+        new CommandWordUsageTuple(SortCommand.COMMAND_WORD, SortCommand.COMMAND_USAGE),
         new CommandWordUsageTuple(HelpCommand.COMMAND_WORD, HelpCommand.COMMAND_USAGE),
         new CommandWordUsageTuple(HistoryCommand.COMMAND_WORD, HistoryCommand.COMMAND_USAGE),
         new CommandWordUsageTuple(ListCommand.COMMAND_WORD, ListCommand.COMMAND_USAGE),
