--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -411,7 +411,7 @@ Adds an event `Halloween Horror Night` in The Myth's Book.
 
 If input is correct, you will be able to see the event being added successfully into The Myth's Book and receive the following displayed result in the Results Display Panel.
 
-image::sampleeventresult.PNG[width="200"]
+image::sampleeventresult.PNG[width="700"]
 
 A `Invalid Command Format` will appear if you have keyed in invalid fields for the event.
 
@@ -526,13 +526,12 @@ image::popupwindow.PNG[width="300"]
 Figure 7.2.2
 
 After adding an event, the Calendar will be populated with a colour over the chosen date of the Event. The day that has an event will be shown as seen in Figure 7.2.3 below.
+The calendar will also be populated after adding an event through the link:#62-adding-an-event--addevent[Add Event Command].
 
 image::populatecalendar.PNG[width="700"]
 Figure 7.2.3
 
 // end::calendar[]
-
-link:#the-myths-book---user-guide[Back To Top]
 
 === Bright Theme
 
