--- a/README.adoc
+++ b/README.adoc
@@ -19,6 +19,7 @@ endif::[]
 * She is *written in OOP fashion* with around 6 KLoC, adapted and improved from [https://github.com/se-edu/addressbook-level4[Addressbook-level4]].
 * New and Added features:
 ** Improved Tag management.
+** Additional details such as Date of Birth and Gender can be recorded.
 ** Greater flexibility in creating a contact (Only a name is required).
 ** Support for _Build Automation_ using Gradle and for _Continuous Integration_ using Travis CI.
 
