--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -467,6 +467,7 @@ Examples:
 Use `clear --all` if you want to clear data in all components (both contacts and events).
 ====
 
+// tag::importXml[]
 === Importing data : `(i)import`
 
 ==== From `.xml` format
@@ -503,6 +504,7 @@ Examples:
 For `Windows` users, use `\` as the name-separator in your `FILEPATH`. +
 For `macOS` and `Linux` users, use `/` instead.
 ====
+// end::importXml[]
 
 ==== From `.bo` format
 
@@ -556,6 +558,7 @@ Example:
 
 * `import --nusmods +++https://nusmods.com/timetable/2017-2018/sem1?CS2103T[TUT]=C01+++`
 
+// tag::exportXml[]
 === Exporting data : `(p)export`
 
 ==== To `.xml` format
@@ -587,6 +590,7 @@ Examples:
 For `Windows` users, use `\` as the name-separator in your `FILEPATH`. +
 For `macOS` and `Linux` users, use `/` instead.
 ====
+// end::exportXml[]
 
 ==== To Microsoft Excel^TM^ Worksheet
 
